[build-system]
requires = ["scikit-build-core[pyproject]>=0.5.1"]
build-backend = "scikit_build_core.build"

[project]
name = "stable_diffusion_cpp_py"
dynamic = ["version"]
description = "Python bindings for the stable_diffusion.cpp library"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Qiang", email = "null.null.null@qq.com" },
]
dependencies = [
    "typing-extensions>=4.5.0",
    "numpy>=1.20.0",
    "diskcache>=5.6.1",
    "jinja2>=2.11.3",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.optional-dependencies]

test = [
    "pytest>=7.4.0",
    "httpx>=0.24.1",
    "scipy>=1.10",
]
dev = [
    "black>=23.3.0",
    "twine>=4.0.2",
    "mkdocs>=1.4.3",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-material>=9.1.18",
    "pytest>=7.4.0",
]
all = [
    "stable_diffusion_cpp[test,dev]",
]

[tool.scikit-build]
wheel.packages = ["stable_diffusion_cpp"]
cmake.verbose = true
cmake.minimum-version = "3.21"
minimum-version = "0.5.1"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "stable_diffusion_cpp/__init__.py"

[project.urls]

[tool.pytest.ini_options]
testpaths = "tests"